# noise

./: Cargo.toml  README.md
src/: envelope.rs  main.rs  noise.rs
