[package]
name = "synthesizer"
version = "0.1.0"
authors = ["DewhiteE <dewhiteeofficial@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.3"
condition_variable = "0.1.5"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["mmsystem", "mmeapi", "mmreg", "minwindef", "winerror", "basetsd", "ntdef"]}